--- a/01-intro/parse-faq.ipynb
+++ b/01-intro/parse-faq.ipynb
@@ -22,61 +22,70 @@
    "source": [
     "def clean_line(line):\n",
     "    line = line.strip()\n",
-    "    line = line.strip('\\uFEFF')\n",
+    "    line = line.strip(\"\\uFEFF\")\n",
     "    return line\n",
     "\n",
+    "\n",
     "def read_faq(file_id):\n",
-    "    url = f'https://docs.google.com/document/d/{file_id}/export?format=docx'\n",
-    "    \n",
+    "    url = f\"https://docs.google.com/document/d/{file_id}/export?format=docx\"\n",
+    "\n",
     "    response = httpx.get(url)\n",
     "    response.raise_for_status()\n",
-    "    \n",
+    "\n",
     "    with io.BytesIO(response.content) as f_in:\n",
     "        doc = docx.Document(f_in)\n",
     "\n",
     "    questions = []\n",
     "\n",
-    "    question_heading_style = 'heading 2'\n",
-    "    section_heading_style = 'heading 1'\n",
-    "    \n",
-    "    heading_id = ''\n",
-    "    section_title = ''\n",
-    "    question_title = ''\n",
-    "    answer_text_so_far = ''\n",
-    "     \n",
+    "    question_heading_style = \"heading 2\"\n",
+    "    section_heading_style = \"heading 1\"\n",
+    "\n",
+    "    heading_id = \"\"\n",
+    "    section_title = \"\"\n",
+    "    question_title = \"\"\n",
+    "    answer_text_so_far = \"\"\n",
+    "\n",
     "    for p in doc.paragraphs:\n",
     "        style = p.style.name.lower()\n",
     "        p_text = clean_line(p.text)\n",
-    "    \n",
+    "\n",
     "        if len(p_text) == 0:\n",
     "            continue\n",
-    "    \n",
+    "\n",
     "        if style == section_heading_style:\n",
     "            section_title = p_text\n",
     "            continue\n",
-    "    \n",
+    "\n",
     "        if style == question_heading_style:\n",
     "            answer_text_so_far = answer_text_so_far.strip()\n",
-    "            if answer_text_so_far != '' and section_title != '' and question_title != '':\n",
-    "                questions.append({\n",
-    "                    'text': answer_text_so_far,\n",
-    "                    'section': section_title,\n",
-    "                    'question': question_title,\n",
-    "                })\n",
-    "                answer_text_so_far = ''\n",
-    "    \n",
+    "            if (\n",
+    "                answer_text_so_far != \"\"\n",
+    "                and section_title != \"\"\n",
+    "                and question_title != \"\"\n",
+    "            ):\n",
+    "                questions.append(\n",
+    "                    {\n",
+    "                        \"text\": answer_text_so_far,\n",
+    "                        \"section\": section_title,\n",
+    "                        \"question\": question_title,\n",
+    "                    }\n",
+    "                )\n",
+    "                answer_text_so_far = \"\"\n",
+    "\n",
     "            question_title = p_text\n",
     "            continue\n",
-    "        \n",
-    "        answer_text_so_far += '\\n' + p_text\n",
-    "    \n",
+    "\n",
+    "        answer_text_so_far += \"\\n\" + p_text\n",
+    "\n",
     "    answer_text_so_far = answer_text_so_far.strip()\n",
-    "    if answer_text_so_far != '' and section_title != '' and question_title != '':\n",
-    "        questions.append({\n",
-    "            'text': answer_text_so_far,\n",
-    "            'section': section_title,\n",
-    "            'question': question_title,\n",
-    "        })\n",
+    "    if answer_text_so_far != \"\" and section_title != \"\" and question_title != \"\":\n",
+    "        questions.append(\n",
+    "            {\n",
+    "                \"text\": answer_text_so_far,\n",
+    "                \"section\": section_title,\n",
+    "                \"question\": question_title,\n",
+    "            }\n",
+    "        )\n",
     "\n",
     "    return questions"
    ]
@@ -89,9 +98,9 @@
    "outputs": [],
    "source": [
     "faq_documents = {\n",
-    "    'data-engineering-zoomcamp': '19bnYs80DwuUimHM65UV3sylsCn2j1vziPOwzBwQrebw',\n",
-    "    'machine-learning-zoomcamp': '1LpPanc33QJJ6BSsyxVg-pWNMplal84TdZtq10naIhD8',\n",
-    "    'mlops-zoomcamp': '12TlBfhIiKtyBv8RnsoJR6F72bkPDGEvPOItJIxaEzE0',\n",
+    "    \"data-engineering-zoomcamp\": \"19bnYs80DwuUimHM65UV3sylsCn2j1vziPOwzBwQrebw\",\n",
+    "    \"machine-learning-zoomcamp\": \"1LpPanc33QJJ6BSsyxVg-pWNMplal84TdZtq10naIhD8\",\n",
+    "    \"mlops-zoomcamp\": \"12TlBfhIiKtyBv8RnsoJR6F72bkPDGEvPOItJIxaEzE0\",\n",
     "}"
    ]
   },
@@ -128,7 +137,7 @@
     "for course, file_id in faq_documents.items():\n",
     "    print(course)\n",
     "    course_documents = read_faq(file_id)\n",
-    "    documents.append({'course': course, 'documents': course_documents})"
+    "    documents.append({\"course\": course, \"documents\": course_documents})"
    ]
   },
   {
@@ -148,7 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('documents.json', 'wt') as f_out:\n",
+    "with open(\"documents.json\", \"wt\") as f_out:\n",
     "    json.dump(documents, f_out, indent=2)"
    ]
   },
