--- a/01-intro/rag-intro.ipynb
+++ b/01-intro/rag-intro.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('documents.json', 'rt') as f_in:\n",
+    "with open(\"documents.json\", \"rt\") as f_in:\n",
     "    docs_raw = json.load(f_in)"
    ]
   },
@@ -41,8 +41,8 @@
     "documents = []\n",
     "\n",
     "for course_dict in docs_raw:\n",
-    "    for doc in course_dict['documents']:\n",
-    "        doc['course'] = course_dict['course']\n",
+    "    for doc in course_dict[\"documents\"]:\n",
+    "        doc[\"course\"] = course_dict[\"course\"]\n",
     "        documents.append(doc)"
    ]
   },
@@ -78,8 +78,7 @@
    "outputs": [],
    "source": [
     "index = minsearch.Index(\n",
-    "    text_fields=[\"question\", \"text\", \"section\"],\n",
-    "    keyword_fields=[\"course\"]\n",
+    "    text_fields=[\"question\", \"text\", \"section\"], keyword_fields=[\"course\"]\n",
     ")"
    ]
   },
@@ -98,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "q = 'the course has already started, can I still enroll?'"
+    "q = \"the course has already started, can I still enroll?\""
    ]
   },
   {
@@ -130,6 +129,7 @@
    "outputs": [],
    "source": [
     "from ollama import Client\n",
+    "\n",
     "# import asyncio\n",
     "# from ollama import AsyncClient"
    ]
@@ -167,13 +167,7 @@
    "source": [
     "client = Client()\n",
     "response = client.chat(\n",
-    "    model=\"llama3:instruct\",\n",
-    "    messages=[\n",
-    "        {\n",
-    "            \"role\": \"user\", \n",
-    "            \"content\": q\n",
-    "            }\n",
-    "    ]\n",
+    "    model=\"llama3:instruct\", messages=[{\"role\": \"user\", \"content\": q}]\n",
     ")\n",
     "\n",
     "print(response[\"message\"][\"content\"])"
@@ -187,13 +181,13 @@
    "outputs": [],
    "source": [
     "def search(query):\n",
-    "    boost = {'question': 3.0, 'section': 0.5}\n",
+    "    boost = {\"question\": 3.0, \"section\": 0.5}\n",
     "\n",
     "    results = index.search(\n",
     "        query=query,\n",
-    "        filter_dict={'course': 'data-engineering-zoomcamp'},\n",
+    "        filter_dict={\"course\": \"data-engineering-zoomcamp\"},\n",
     "        boost_dict=boost,\n",
-    "        num_results=5\n",
+    "        num_results=5,\n",
     "    )\n",
     "\n",
     "    return results"
@@ -218,10 +212,13 @@
     "\"\"\".strip()\n",
     "\n",
     "    context = \"\"\n",
-    "    \n",
+    "\n",
     "    for doc in search_results:\n",
-    "        context = context + f\"section: {doc['section']}\\nquestion: {doc['question']}\\nanswer: {doc['text']}\\n\\n\"\n",
-    "    \n",
+    "        context = (\n",
+    "            context\n",
+    "            + f\"section: {doc['section']}\\nquestion: {doc['question']}\\nanswer: {doc['text']}\\n\\n\"\n",
+    "        )\n",
+    "\n",
     "    prompt = prompt_template.format(question=query, context=context).strip()\n",
     "    return prompt"
    ]
@@ -238,11 +235,11 @@
     "        model=\"llama3:instruct\",\n",
     "        messages=[\n",
     "            {\n",
-    "                \"role\": \"user\", \n",
+    "                \"role\": \"user\",\n",
     "                \"content\": prompt,\n",
-    "                }\n",
-    "        ]\n",
-    "    )    \n",
+    "            }\n",
+    "        ],\n",
+    "    )\n",
     "    return response[\"message\"][\"content\"]"
    ]
   },
@@ -254,6 +251,7 @@
    "outputs": [],
    "source": [
     "query = \"how do I run kafka?\"\n",
+    "\n",
     "\n",
     "def rag(query, client: Client):\n",
     "    search_results = search(query)\n",
@@ -344,7 +342,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "es_client = Elasticsearch('http://localhost:9200')"
+    "es_client = Elasticsearch(\"http://localhost:9200\")"
    ]
   },
   {
@@ -372,18 +370,15 @@
    ],
    "source": [
     "index_settings = {\n",
-    "    \"settings\": {\n",
-    "        \"number_of_shards\": 1,\n",
-    "        \"number_of_replicas\": 0\n",
-    "    },\n",
+    "    \"settings\": {\"number_of_shards\": 1, \"number_of_replicas\": 0},\n",
     "    \"mappings\": {\n",
     "        \"properties\": {\n",
     "            \"text\": {\"type\": \"text\"},\n",
     "            \"section\": {\"type\": \"text\"},\n",
     "            \"question\": {\"type\": \"text\"},\n",
-    "            \"course\": {\"type\": \"keyword\"} \n",
+    "            \"course\": {\"type\": \"keyword\"},\n",
     "        }\n",
-    "    }\n",
+    "    },\n",
     "}\n",
     "\n",
     "index_name = \"course-questions\"\n",
@@ -451,7 +446,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = 'I just disovered the course. Can I still join it?'"
+    "query = \"I just disovered the course. Can I still join it?\""
    ]
   },
   {
@@ -470,25 +465,21 @@
     "                    \"multi_match\": {\n",
     "                        \"query\": query,\n",
     "                        \"fields\": [\"question^3\", \"text\", \"section\"],\n",
-    "                        \"type\": \"best_fields\"\n",
+    "                        \"type\": \"best_fields\",\n",
     "                    }\n",
     "                },\n",
-    "                \"filter\": {\n",
-    "                    \"term\": {\n",
-    "                        \"course\": \"data-engineering-zoomcamp\"\n",
-    "                    }\n",
-    "                }\n",
+    "                \"filter\": {\"term\": {\"course\": \"data-engineering-zoomcamp\"}},\n",
     "            }\n",
-    "        }\n",
+    "        },\n",
     "    }\n",
     "\n",
     "    response = es_client.search(index=index_name, body=search_query)\n",
-    "    \n",
+    "\n",
     "    result_docs = []\n",
-    "    \n",
-    "    for hit in response['hits']['hits']:\n",
-    "        result_docs.append(hit['_source'])\n",
-    "    \n",
+    "\n",
+    "    for hit in response[\"hits\"][\"hits\"]:\n",
+    "        result_docs.append(hit[\"_source\"])\n",
+    "\n",
     "    return result_docs"
    ]
   },
