--- a/01-intro/parse-faq.ipynb
+++ b/01-intro/parse-faq.ipynb
@@ -2,102 +2,111 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "4cd1eaa8-3424-41ad-9cf2-3e8548712865",
    "metadata": {},
    "outputs": [],
    "source": [
     "import io\n",
     "\n",
-    "import requests\n",
-    "import docx"
+    "import httpx\n",
+    "import requests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "8180e7e4-b90d-4900-a59b-d22e5d6537c4",
    "metadata": {},
    "outputs": [],
    "source": [
     "def clean_line(line):\n",
     "    line = line.strip()\n",
-    "    line = line.strip('\\uFEFF')\n",
+    "    line = line.strip(\"\\uFEFF\")\n",
     "    return line\n",
     "\n",
+    "\n",
     "def read_faq(file_id):\n",
-    "    url = f'https://docs.google.com/document/d/{file_id}/export?format=docx'\n",
-    "    \n",
-    "    response = requests.get(url)\n",
+    "    url = f\"https://docs.google.com/document/d/{file_id}/export?format=docx\"\n",
+    "\n",
+    "    response = httpx.get(url)\n",
     "    response.raise_for_status()\n",
-    "    \n",
+    "\n",
     "    with io.BytesIO(response.content) as f_in:\n",
     "        doc = docx.Document(f_in)\n",
     "\n",
     "    questions = []\n",
     "\n",
-    "    question_heading_style = 'heading 2'\n",
-    "    section_heading_style = 'heading 1'\n",
-    "    \n",
-    "    heading_id = ''\n",
-    "    section_title = ''\n",
-    "    question_title = ''\n",
-    "    answer_text_so_far = ''\n",
-    "     \n",
+    "    question_heading_style = \"heading 2\"\n",
+    "    section_heading_style = \"heading 1\"\n",
+    "\n",
+    "    heading_id = \"\"\n",
+    "    section_title = \"\"\n",
+    "    question_title = \"\"\n",
+    "    answer_text_so_far = \"\"\n",
+    "\n",
     "    for p in doc.paragraphs:\n",
     "        style = p.style.name.lower()\n",
     "        p_text = clean_line(p.text)\n",
-    "    \n",
+    "\n",
     "        if len(p_text) == 0:\n",
     "            continue\n",
-    "    \n",
+    "\n",
     "        if style == section_heading_style:\n",
     "            section_title = p_text\n",
     "            continue\n",
-    "    \n",
+    "\n",
     "        if style == question_heading_style:\n",
     "            answer_text_so_far = answer_text_so_far.strip()\n",
-    "            if answer_text_so_far != '' and section_title != '' and question_title != '':\n",
-    "                questions.append({\n",
-    "                    'text': answer_text_so_far,\n",
-    "                    'section': section_title,\n",
-    "                    'question': question_title,\n",
-    "                })\n",
-    "                answer_text_so_far = ''\n",
-    "    \n",
+    "            if (\n",
+    "                answer_text_so_far != \"\"\n",
+    "                and section_title != \"\"\n",
+    "                and question_title != \"\"\n",
+    "            ):\n",
+    "                questions.append(\n",
+    "                    {\n",
+    "                        \"text\": answer_text_so_far,\n",
+    "                        \"section\": section_title,\n",
+    "                        \"question\": question_title,\n",
+    "                    }\n",
+    "                )\n",
+    "                answer_text_so_far = \"\"\n",
+    "\n",
     "            question_title = p_text\n",
     "            continue\n",
-    "        \n",
-    "        answer_text_so_far += '\\n' + p_text\n",
-    "    \n",
+    "\n",
+    "        answer_text_so_far += \"\\n\" + p_text\n",
+    "\n",
     "    answer_text_so_far = answer_text_so_far.strip()\n",
-    "    if answer_text_so_far != '' and section_title != '' and question_title != '':\n",
-    "        questions.append({\n",
-    "            'text': answer_text_so_far,\n",
-    "            'section': section_title,\n",
-    "            'question': question_title,\n",
-    "        })\n",
+    "    if answer_text_so_far != \"\" and section_title != \"\" and question_title != \"\":\n",
+    "        questions.append(\n",
+    "            {\n",
+    "                \"text\": answer_text_so_far,\n",
+    "                \"section\": section_title,\n",
+    "                \"question\": question_title,\n",
+    "            }\n",
+    "        )\n",
     "\n",
     "    return questions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "7d3c2dd7-f64a-4dc7-a4e3-3e8aadfa720f",
    "metadata": {},
    "outputs": [],
    "source": [
     "faq_documents = {\n",
-    "    'data-engineering-zoomcamp': '19bnYs80DwuUimHM65UV3sylsCn2j1vziPOwzBwQrebw',\n",
-    "    'machine-learning-zoomcamp': '1LpPanc33QJJ6BSsyxVg-pWNMplal84TdZtq10naIhD8',\n",
-    "    'mlops-zoomcamp': '12TlBfhIiKtyBv8RnsoJR6F72bkPDGEvPOItJIxaEzE0',\n",
+    "    \"data-engineering-zoomcamp\": \"19bnYs80DwuUimHM65UV3sylsCn2j1vziPOwzBwQrebw\",\n",
+    "    \"machine-learning-zoomcamp\": \"1LpPanc33QJJ6BSsyxVg-pWNMplal84TdZtq10naIhD8\",\n",
+    "    \"mlops-zoomcamp\": \"12TlBfhIiKtyBv8RnsoJR6F72bkPDGEvPOItJIxaEzE0\",\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "f94efe26-05e8-4ae5-a0fa-0a8e16852816",
    "metadata": {},
    "outputs": [
@@ -105,9 +114,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data-engineering-zoomcamp\n",
-      "machine-learning-zoomcamp\n",
-      "mlops-zoomcamp\n"
+      "data-engineering-zoomcamp\n"
+     ]
+    },
+    {
+     "ename": "HTTPStatusError",
+     "evalue": "Redirect response '307 Temporary Redirect' for url 'https://docs.google.com/document/d/19bnYs80DwuUimHM65UV3sylsCn2j1vziPOwzBwQrebw/export?format=docx'\nRedirect location: 'https://doc-08-10-docstext.googleusercontent.com/export/e6hpso97lrhpva19l3uocm525o/72d4qare7nev38as4r9slaq1cg/1718617975000/106917223087451497678/*/19bnYs80DwuUimHM65UV3sylsCn2j1vziPOwzBwQrebw?format=docx'\nFor more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/307",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mHTTPStatusError\u001b[0m                           Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m course, file_id \u001b[38;5;129;01min\u001b[39;00m faq_documents\u001b[38;5;241m.\u001b[39mitems():\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(course)\n\u001b[0;32m----> 5\u001b[0m     course_documents \u001b[38;5;241m=\u001b[39m \u001b[43mread_faq\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile_id\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      6\u001b[0m     documents\u001b[38;5;241m.\u001b[39mappend({\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcourse\u001b[39m\u001b[38;5;124m'\u001b[39m: course, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdocuments\u001b[39m\u001b[38;5;124m'\u001b[39m: course_documents})\n",
+      "Cell \u001b[0;32mIn[3], line 10\u001b[0m, in \u001b[0;36mread_faq\u001b[0;34m(file_id)\u001b[0m\n\u001b[1;32m      7\u001b[0m url \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhttps://docs.google.com/document/d/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile_id\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/export?format=docx\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      9\u001b[0m response \u001b[38;5;241m=\u001b[39m httpx\u001b[38;5;241m.\u001b[39mget(url)\n\u001b[0;32m---> 10\u001b[0m \u001b[43mresponse\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mraise_for_status\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m io\u001b[38;5;241m.\u001b[39mBytesIO(response\u001b[38;5;241m.\u001b[39mcontent) \u001b[38;5;28;01mas\u001b[39;00m f_in:\n\u001b[1;32m     13\u001b[0m     doc \u001b[38;5;241m=\u001b[39m docx\u001b[38;5;241m.\u001b[39mDocument(f_in)\n",
+      "File \u001b[0;32m/opt/homebrew/anaconda3/envs/zoomcamp/lib/python3.12/site-packages/httpx/_models.py:761\u001b[0m, in \u001b[0;36mResponse.raise_for_status\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    759\u001b[0m error_type \u001b[38;5;241m=\u001b[39m error_types\u001b[38;5;241m.\u001b[39mget(status_class, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid status code\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    760\u001b[0m message \u001b[38;5;241m=\u001b[39m message\u001b[38;5;241m.\u001b[39mformat(\u001b[38;5;28mself\u001b[39m, error_type\u001b[38;5;241m=\u001b[39merror_type)\n\u001b[0;32m--> 761\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m HTTPStatusError(message, request\u001b[38;5;241m=\u001b[39mrequest, response\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m)\n",
+      "\u001b[0;31mHTTPStatusError\u001b[0m: Redirect response '307 Temporary Redirect' for url 'https://docs.google.com/document/d/19bnYs80DwuUimHM65UV3sylsCn2j1vziPOwzBwQrebw/export?format=docx'\nRedirect location: 'https://doc-08-10-docstext.googleusercontent.com/export/e6hpso97lrhpva19l3uocm525o/72d4qare7nev38as4r9slaq1cg/1718617975000/106917223087451497678/*/19bnYs80DwuUimHM65UV3sylsCn2j1vziPOwzBwQrebw?format=docx'\nFor more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/307"
      ]
     }
    ],
@@ -117,7 +137,7 @@
     "for course, file_id in faq_documents.items():\n",
     "    print(course)\n",
     "    course_documents = read_faq(file_id)\n",
-    "    documents.append({'course': course, 'documents': course_documents})"
+    "    documents.append({\"course\": course, \"documents\": course_documents})"
    ]
   },
   {
@@ -137,7 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('documents.json', 'wt') as f_out:\n",
+    "with open(\"documents.json\", \"wt\") as f_out:\n",
     "    json.dump(documents, f_out, indent=2)"
    ]
   },
@@ -193,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
